--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Epaaa desde hub</h1>
+        <h1>transiciones Guide</h1>
     </header>
     <h1> ola</h1>
 
